package catsandmice.model;

public interface Layer {
}
