package catsandmice.model;

import java.io.Serializable;

public class Surface implements Layer, Serializable {
}
